; ModuleID = '/home/carl/AnghaBench/mongoose/src/common/platforms/msp432/extr_msp432_libc.c_gettimeofday.c'
source_filename = "/home/carl/AnghaBench/mongoose/src/common/platforms/msp432/extr_msp432_libc.c_gettimeofday.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gettimeofday(%struct.timeval* %0, i8* %1) #0 {
  %3 = alloca %struct.timeval*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.timeval* %0, %struct.timeval** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call i32 (...) @Clock_getTicks()
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = sdiv i32 %7, 1000
  %9 = load %struct.timeval*, %struct.timeval** %3, align 8
  %10 = getelementptr inbounds %struct.timeval, %struct.timeval* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load i32, i32* %5, align 4
  %12 = srem i32 %11, 1000
  %13 = mul nsw i32 %12, 1000
  %14 = load %struct.timeval*, %struct.timeval** %3, align 8
  %15 = getelementptr inbounds %struct.timeval, %struct.timeval* %14, i32 0, i32 1
  store i32 %13, i32* %15, align 4
  ret i32 0
}

declare dso_local i32 @Clock_getTicks(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
